# rain-code

./: .gitignore  CMakeLists.txt  README.md  filter.cpp  main.cpp  trace_generator.cpp
arglib/: arglib.cpp  arglib.h
data/: test.text
rainlib/: CMakeLists.txt  callsInPage.cpp  lef.cpp  lefplus.cpp  lei.cpp  mret2.cpp  net.cpp  netplus.cpp  rain.cpp  rain.h  rf_techniques.h  rf_utils.h  tt.cpp
rainlib/Analysis/: CMakeLists.txt  callsInPage.cpp
rainlib/RFTs/: CMakeLists.txt  lef.cpp  lefplus.cpp  lei.cpp  mret2.cpp  net.cpp  netj.cpp  netplus.cpp  tt.cpp
results/graphs/: graphutils.R  table.R
test/: bubble.c  net  run-tests.sh  run.sh  simple.c  simpleNested.c  simpleNested2.c
test/black-box/: run.sh
test/black-box/bubble/: bubble.c
test/black-box/bubble/expected/lef/: test.dot0001.dot  test.dot0002.dot  test.dot0003.dot  test.dot0004.dot
test/black-box/bubble/expected/lei/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot
test/black-box/bubble/expected/mret2/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot  test.dot0004.dot  test.dot0005.dot
test/black-box/bubble/expected/net/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0005.dot
test/black-box/bubble/expected/netplus/: overall_stats.csv  reg_stats.csv  test.dot0003.dot
test/black-box/bubble/expected/tt/: overall_stats.csv  reg_stats.csv  test.dot0002.dot
test/black-box/nested1/expected/lef/: overall_stats.csv  test.dot0002.dot
test/black-box/nested1/expected/lei/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot
test/black-box/nested1/expected/mret2/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot
test/black-box/nested1/expected/net/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0003.dot
test/black-box/nested1/expected/netplus/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot
test/black-box/nested1/expected/tt/: overall_stats.csv  reg_stats.csv  test.dot0001.dot
test/black-box/nested2/expected/lef/: reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot
test/black-box/nested2/expected/lei/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot
test/black-box/nested2/expected/mret2/: overall_stats.csv  reg_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0003.dot  test.dot0004.dot  test.dot0005.dot
test/black-box/nested2/expected/net/: overall_stats.csv  test.dot0001.dot  test.dot0002.dot  test.dot0004.dot  test.dot0005.dot
test/black-box/nested2/expected/netplus/: overall_stats.csv  reg_stats.csv  test.dot0002.dot  test.dot0004.dot
test/black-box/nested2/expected/tt/: overall_stats.csv  reg_stats.csv  (+1 more)
test/black-box/nested3/: simpleNested3.c
test/black-box/simple/: simple.c
test/black-box/simpleIF/: simpleIf.c
test/zinsly-binaries/: lei  mret2  tt
test/zinsly-experiments/: generateTable.sh  graph.R  run.sh
tracegenerator/: CMakeLists.txt  a.out  generate.sh  init.ld  itrace.cpp  trace_converter.cpp  trace_generator.cpp
tracelib/: trace_io.cpp  trace_io.h
(+1868 files in other folders)
